# pipeline_remove_artefact_w_diffusion_model

./: .gitignore  README.md  class_LDM.py  pipeline_remove_artefact_from_raw.py  pyproject.toml  tools.py
datafactory/: dataloader.py  dataset.py
model/backbone/: DDPM.py  rectified_flow.py
model/denoiser/: mlp.py  transformer.py
model/pretrained/: vqvae.py
