[project]
name = "pipeline-remove-artefact-w-diffu"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (==2.3.1)",
    "pycatch22 (>=0.4.5,<0.5.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "timm (>=1.0.17,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "mne (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
